# Superstore-Sales-Dashboard

./: README.md  app.py  pyproject.toml
streamlit_app/: config.py  requirements.txt
streamlit_app/data/: loader.py
streamlit_app/data/sources/: base.py  git.py  local.py
streamlit_app/domain/: schema.py  transformations.py
streamlit_app/services/: filtering.py
streamlit_app/tests/: conftest.py  test_data_integrity.py  test_data_loading.py  test_filters.py  test_priority_order.txt  test_schema_validation.py  test_transformations.py
streamlit_app/ui/: dashboard.py  explorer.py  sidebar.py
streamlit_app/ui/tabs/: discount_tab.py  products_tab.py  sales_tab.py
streamlit_app/utils/: exceptions.py  logging.py
